added my bubble map stuff

--- a/index.html
+++ b/index.html
@@ -28,5 +28,14 @@
     </div>
     <script src="/scripts/regions-map.js"></script>
     <script src="/scripts/map.js"></script>
+
+    <!--The bubble chart-->
+    <div>
+        <h2>House Price Deciles Compared To Income Deciles And Population Per Region</h2>
+        <svg id="bubbleChart"></svg>
+        <label for="bmap-yearSlider">Year: </label>
+        <input type="range" id="bmap-yearSlider" min="2012" max="2022" step="1" value="2012">
+        <span id="bmap-yearLabel">2012</span>
+    </div>
 </body>
 </html>
