forgot to add my bubble chart script oops

--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
         <input type="range" id="bmap-yearSlider" min="2012" max="2022" step="1" value="2012">
         <span id="bmap-yearLabel">2012</span>
     </div>
+    <script src="/scripts/bubbleChartScript.js"></script>
 </body>
 </html>
