--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!--The bubble chart-->
     <div>
         <h2>House Price Deciles Compared To Income Deciles And Population Per Region</h2>
-        <svg id="bubbleChart"></svg>
+        <div id="bubbleChart"></div> <!--turned it into div?-->
         <label for="bmap-yearSlider">Year: </label>
         <input type="range" id="bmap-yearSlider" min="2012" max="2022" step="1" value="2012">
         <span id="bmap-yearLabel">2012</span>
