Added circular packing

--- a/index.html
+++ b/index.html
@@ -51,5 +51,12 @@
         }
     </style>
     
+    <div>
+        <h2>Population By Region</h2>
+        <div id="packing"></div>
+    </div>
+    <script src="/scripts/circularPacking.js"></script>
+
+
 </body>
 </html>
