Added circular packing comment to html file

--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
         }
     </style>
     
+    <!-- Circular Packing -->
     <div>
         <h2>Population By Region</h2>
         <div id="packing"></div>
     </div>
     <script src="/scripts/circularPacking.js"></script>
-
-
 </body>
 </html>
