added basic flow map - not finished

--- a/index.html
+++ b/index.html
@@ -57,5 +57,12 @@
         <div id="packing"></div>
     </div>
     <script src="/scripts/circularPacking.js"></script>
+
+    <!-- Flow Map -->
+    <div>
+        <h2>Flow Map</h2>
+        <svg id="flowMap"></svg>
+    </div>
+    <script src="/scripts/flowMap.js"></script>
 </body>
 </html>
