--- a/index.html
+++ b/index.html
@@ -65,5 +65,13 @@
         <svg id="flowMap"></svg>
     </div>
     <script src="/scripts/flowMap.js"></script>
+
+    <!-- Chord diagram -->
+    <div>
+        <h2>Chord diagram</h2>
+        <p>The outer arcs show where people who moved moved from, while the inner chords show where people who moved are moving to</p>
+        <div id="chord"></div>
+    </div>
+    <script src="/scripts/chordDiagram.js"></script>
 </body>
 </html>
