nearly finished bubble chart

--- a/index.html
+++ b/index.html
@@ -35,20 +35,10 @@
     <!--The bubble chart-->
     <div>
         <h2>House Price Deciles Compared To Income Deciles And Population Per Region</h2>
-        <div id="bubbleChart"></div> <!--turned it into div?-->
+        <div id="bubbleChart"></div>
     </div>
+    <script src="/scripts/main.js"></script>
     <script src="/scripts/bubbleChartScript.js"></script>
-
-    <!--CSS for the bubble chart, please move if necessary :)-->
-    <style>
-        .bubbles {
-            stroke-width: 1px;
-            stroke: white;
-        }
-        .bubbles:hover {
-            stroke: black;
-        }
-    </style>
     
     <!-- Circular Packing -->
     <div>
