histogram: add histogram to page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         <span>2012</span>
     </div>
 
+    <!-- histogram -->
+     <div>
+        <h2>Moving by Age</h2>
+        <svg id="histogram"></svg>
+     </div>
+     <script src="/scripts/histogram.js"></script>
+
     <!-- Regions Map -->
     <div>
         <h2>Regions Migration Over Time</h2>
