added tooltip and fixed the data parsing so region zoom is showing correct values and colours

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <h2>Regions Migration Over Time</h2>
         <svg id="regions-map"></svg>
     </div>
+    <div id="tooltip" style="position: absolute; pointer-events: none; background: white; padding: 5px; border: 1px solid #ccc; border-radius: 5px; display: none;"></div>
 
     <!-- LAs Map -->
     <div>
