bubble chart legend

--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
         <div class="chart-container">
             <h2>House Price Deciles Compared To Income Deciles And Population Per Region</h2>
             <div id="bubbleChart"></div>
+            <div id="bubbleChartLegend"></div>
         </div>
 
         <div id="tooltip"></div>
 
         <script src="/scripts/main.js"></script>
         <script src="/scripts/bubbleChartScript.js"></script>
+        <script src="/scripts/bubbleChartLegend.js"></script>
         <script src="/scripts/circularPacking.js"></script>
         <script src="/scripts/histogram.js"></script>
         <script src="/scripts/flowMap.js"></script>
