adding fixed LA tooltips

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <h3 id="region-title"></h3>
                 <ul id="industry-list" style="list-style: none; padding: 0; color: black;"></ul>
             </div>
+            <div id="tooltip" class="tooltip"></div>
         </div>
         
     
@@ -62,8 +63,6 @@
             <div id="bubbleChart"></div>
             <div id="bubbleChartLegend"></div>
         </div>
-
-        <div id="tooltip"></div>
 
         <script src="/scripts/main.js"></script>
         <script src="/scripts/bubbleChartScript.js"></script>
