Made circular packing smaller and finished the readme.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
         <!-- Chord diagram -->
         <div class="chart-container">
-            <h2>Chord diagram</h2>
-            <p>The outer arcs show where people who moved moved from, while the inner chords show where people who moved are moving to</p>
+            <h2>Migration Between Regions</h2>
+            <p>The outer arcs show where people have moved from, while the inner chords show where people are moving to.</p>
             <div id="chord"></div>
 
             <!-- histogram -->
@@ -40,7 +40,8 @@
 
         <!-- Flow Map -->
         <div class="chart-container">
-            <h2>Flow Map</h2>
+            <h2>Migration Between Regions</h2>
+            <p>Arcs show pattern of migration per each region, cumulative over the time scale.</p>
             <svg id="flowMap"></svg>
         </div>
 
@@ -59,7 +60,7 @@
     
         <!--The bubble chart-->
         <div class="chart-container">
-            <h2>House Price Deciles Compared To Income Deciles And Population Per Region</h2>
+            <h2>House Price Compared To Income And Population Per Region</h2>
             <div id="bubbleChart"></div>
             <div id="bubbleChartLegend"></div>
         </div>
