--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
          <!-- Circular Packing -->
          <div class="chart-container">
-            <h2>Population By Region</h2>
+            <h2 style="transform:translateX(30%)">Population By Region</h2>
             <div id="packing"></div>
         </div>
 
