fixed font sizing for circular packing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
          <!-- Circular Packing -->
          <div class="chart-container">
-            <h2 style="transform:translateX(30%)">Population By Region</h2>
+            <div id="circularPackingTitle">
+                <h2">Population By Region</h2>
+            </div>
             <div id="packing"></div>
         </div>
 
