adding slightly better fitting maps and title

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <span>2012</span>
     </div>
 
+    <h1 style="text-align: center;">UK Internal Migration Dashboard (Excluding Northern Ireland)</h1>
+
     <div class="dashboard-grid">
 
          <!-- Circular Packing -->
